--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,9 @@ add_executable(${PROJECT_NAME} main.cpp
         tile.h
         resources.cpp
         resources.h
+        tiles/ElixirPump.h
+        TileBase.cpp
+        TileBase.h
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE ${SFML_TARGETS})
