Added tooltip, fixed coordinate ui

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,8 @@ add_executable(${PROJECT_NAME} main.cpp
         TileBase.h
         tiles/Brick.h
         ResourceManager.h
+        level_reader.cpp
+        level_reader.h
 )
 
 target_link_libraries(${PROJECT_NAME} PRIVATE ${SFML_TARGETS})
